--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
                   data-w-id="fbbc2dbc-a120-2a0d-5aaf-1154edc56a55"
                   class="heading__one"
                 >
-                  J Ponzi Morgan
+                  SNERF
                 </h1>
               </div>
             </div>
@@ -1019,7 +1019,7 @@
             />
             <div class="about__paragraph__wrapper">
               <p style="color: white" class="paragraph-5">
-                Yo, check it! Slerf just broke their pone on their X space! It's time to give it a change to phone for a gun! 🦥🔫
+                Yo, check it! Slerf just broke their phone on their X space! It's time to change their phone for a gun! 🦥🔫 
                 <br />
               </p>
               <br />
