--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
         </a>
         <nav role="navigation" class="navigation__menu w-nav-menu">
           <a
-            href="https://dexscreener.com/solana/HCXG4pmFAK5rJDctPYGFLEvfzeu2rHYuvsp37jPLqBL7"
+            href="https://dexscreener.com/solana/soon"
             data-w-id="1d7c51b5-4816-59bc-69e9-5c7e0e9a91ba"
             class="nav__link is--2 w-nav-link"
             >CHART</a
@@ -566,7 +566,7 @@
           >
 
           <a
-            href="https://raydium.io/swap/?inputCurrency=sol&amp;outputCurrency=HCXG4pmFAK5rJDctPYGFLEvfzeu2rHYuvsp37jPLqBL7&amp;fixed=in"
+            href="https://raydium.io/swap/?inputCurrency=sol&amp;outputCurrency=soon&amp;fixed=in"
             class="nav__mint__button w-inline-block"
           >
             <div class="mint__button__text">Buy $SNERF</div>
