--- a/index.html
+++ b/index.html
@@ -553,13 +553,13 @@
           >
 
           <a
-            href="https://twitter.com/PonziMorgan"
+            href="https://twitter.com/SnerfSol_"
             data-w-id="1d7c51b5-4816-59bc-69e9-5c7e0e9a91be"
             class="nav__link is--4 w-nav-link"
             >TWITTER</a
           >
           <a
-            href="https://t.me/jpmorgan_sol"
+            href="https://t.me/SnerfSol"
             data-w-id="1d7c51b5-4816-59bc-69e9-5c7e0e9a91be"
             class="nav__link is--4 w-nav-link"
             >TELEGRAM</a
@@ -1169,7 +1169,7 @@
                   <div
                     class="social__media__icon__wrapper is--transparent is--two"
                   >
-                    <a href="https://t.me/jpmorgan_sol"
+                    <a href="https://t.me/SnerfSol"
                       ><img
                         src="images/tg.svg"
                         loading="lazy"
@@ -1180,7 +1180,7 @@
                   <div
                     class="social__media__icon__wrapper is--transparent is--two"
                   >
-                    <a href="https://twitter.com/PonziMorgan"
+                    <a href="https://twitter.com/SnerfSol_"
                       ><img
                         src="images/627c29192458d4a628f6a99d_6248d2c911b73c84564a9aa6_Twitter-footer.svg"
                         loading="lazy"
